syntax = "proto3";

package model;

//合约对象信息
message ContractObject {
    string addr = 1;
    ContractData data = 2;
    ContractState state = 3;
}

// 存放合约固定数据
message ContractData {
    string creator = 1;
    bytes code = 2;
    bytes codeHash = 3;
}

// 存放合约变化数据
message ContractState {
    uint64 nonce = 1;
    bool suicided = 2;
    bytes storageHash = 3;
    map<string,bytes> storage = 4;
}

// 创建/调用合约的请求结构
message ContractAction {
    // 转账金额
    uint64 amount = 1;
    // 消耗限制，默认为Transaction.Fee
    uint64 gasLimit = 2;
    // gas价格，默认为1
    uint32 gasPrice = 3;
    // 合约数据
    bytes code = 4;
    // 交易备注
    string note = 5;
}


// 合约创建/调用日志
message ReceiptContract {
    string caller = 1;
    string contract = 2;
    uint64 usedGas = 3;
    // 创建合约返回的代码
    bytes  ret = 4;
}

// 存放合约固定数据
message ContractDataCmd {
    string creator = 1;
    string code = 2;
    string codeHash = 3;
}

// 存放合约变化数据
message ContractStateCmd {
    uint64 nonce = 1;
    bool suicided = 2;
    string storageHash = 3;
    map<string,string> storage = 4;
}

// 合约创建/调用日志
message ReceiptContractCmd {
    string caller = 1;
    string contract = 2;
    uint64 usedGas = 3;
    // 创建合约返回的代码
    string  ret = 4;
}